Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.84+fixes
-----------------------
Cherry-Picked from the master development branch
for complaints please contact hs@schlittermann.de
-------------------------------------------------

JH/05 Fix results-pipe from transport process.  Several recipients, combined
      with certificate use, exposed issues where response data items split
      over buffer boundaries were not parsed properly.  This eventually
      resulted in duplicates being sent.  This issue only became common enough
      to notice due to the introduction of conection certificate information,
      the item size being so much larger.  Found and fixed by Wolfgang Breyha.

Exim version 4.84
-----------------
TL/01 Bugzilla 1506: Re-add a 'return NULL' to silence complaints from static
      checkers that were complaining about end of non-void function with no
      return.

JH/01 Bug 1513: Fix parsing of quoted parameter values in MIME headers.
      This was a regression intruduced in 4.83 by another bugfix.

JH/02 Fix broken compilation when EXPERIMENTAL_DSN is enabled.

TL/02 Bug 1509: Fix exipick for enhanced spoolfile specification used when
      EXPERIMENTAL_DNS is enabled.  Fix from Wolfgang Breyha.


Exim version 4.83
-----------------

TF/01 Correctly close the server side of TLS when forking for delivery.

      When a message was received over SMTP with TLS, Exim failed to clear up
      the incoming connection properly after forking off the child process to
      deliver the message. In some situations the subsequent outgoing
      delivery connection happened to have the same fd number as the incoming
      connection previously had. Exim would try to use TLS and fail, logging
      a "Bad file descriptor" error.

TF/02 Portability fix for building lookup modules on Solaris when the xpg4
      utilities have not been installed.
